<?xml version="1.0" encoding="utf-8"?>
<!--layout for AddActivity-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_500"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/create_your_new_vault"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/add_logo"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        android:layout_gravity="center"
        android:layout_marginVertical="28dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_layout_dropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="14dp"
        android:hint="@string/application"
        app:boxCornerRadiusTopEnd="14dp"
        app:boxCornerRadiusTopStart="14dp"
        app:boxStrokeColor="@color/orange_200"
        app:errorTextColor="@color/orange_700"
        app:boxStrokeErrorColor="@color/orange_700"
        app:endIconTint="@color/brown_500"
        app:errorEnabled="true">

        <AutoCompleteTextView
            android:id="@+id/add_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/layout_bg"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_layout_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="38dp"
            android:hint="@string/label_id"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_layout_pswd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="12dp"
            android:hint="@string/label_pswd"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_pswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/add_gen_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/generate"
            app:cornerRadius="12dp" />

        <Button
            android:id="@+id/create_vault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginBottom="14dp"
            android:text="@string/create_vault"
            app:cornerRadius="12dp" />

    </LinearLayout>

</LinearLayout>